--- a/package.json
+++ b/package.json
@@ -6,19 +6,21 @@
     "dev": "next dev",
     "build": "next build",
     "start": "next start",
-    "lint": "next lint"
+    "lint": "next lint",
+    "e2e:console": "cypress open"
   },
   "dependencies": {
-    "next": "^12.0.4",
     "@chakra-ui/react": "^1.7.0",
     "@emotion/react": "^11.5.0",
     "@emotion/styled": "^11.3.0",
     "framer-motion": "^4.1.17",
+    "next": "^12.0.4",
     "react": "17.0.2",
     "react-dom": "17.0.2"
   },
   "devDependencies": {
     "@types/react": "17.0.24",
+    "cypress": "^9.1.1",
     "eslint": "7.32.0",
     "eslint-config-next": "^12.0.4",
     "typescript": "4.4.3"
