--- a/tsconfig.json
+++ b/tsconfig.json
@@ -20,6 +20,6 @@
       ]
     },
   },
-  "include": ["next-env.d.ts", "**/*.ts", "**/*.tsx"],
+  "include": ["next-env.d.ts", "**/*.ts", "**/*.tsx", "cypress/tsconfig.json"],
   "exclude": ["node_modules"]
 }
