--- a/package.json
+++ b/package.json
@@ -9,13 +9,17 @@
     "lint": "next lint"
   },
   "dependencies": {
-    "next": "^12.0.4",
     "@chakra-ui/react": "^1.7.0",
     "@emotion/react": "^11.5.0",
     "@emotion/styled": "^11.3.0",
+    "@types/xlsx-populate": "git+https://github.com/JanLoebel/types-xlsx-populate.git",
+    "file-saver": "^2.0.5",
     "framer-motion": "^4.1.17",
+    "next": "^12.0.4",
     "react": "17.0.2",
-    "react-dom": "17.0.2"
+    "react-dom": "17.0.2",
+    "xlsx": "^0.17.4",
+    "xlsx-populate": "^1.21.0"
   },
   "devDependencies": {
     "@types/react": "17.0.24",
